# fastapp-chatbot-manager

./: .dockerignore  .gitignore  CHANGES.md  Dockerfile  LICENSE  README.md  alembic.ini  dev.sh  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
app/: main.py
app/api/: __init__.py
app/api/routes/: bot.py  employee.py  healtchek.py  login.py  product.py  schedule.py  service.py  slots.py  users.py
app/auth/: auth.py
app/bot/: automation.py
app/chat/: bot.py  message.py
app/chat/messages/: barber.py  employee.py  opening_hours.py  products.py  raflle_promo.py  schedule.py  users.py  welcome.py
app/core/: base.py  bot.py  employee.py  log.py  login.py  messages.py  product.py  schedule.py  user.py  users.py
app/core/exception/: exceptions.py  product.py
app/core/utils/: metadata.py  pagination.py  products.py
app/db/: base.py  db.py  depency.py
app/logs/: log.py
app/messages/: barber.py  employee.py  opening_hours.py  products.py  raflle_promo.py  schedule.py  users.py  welcome.py
app/models/: __init__.py  base.py  block.py  employee.py  messages.py  product.py  schedule.py  time_recording.py  user.py  users.py
app/models/employee/: employee.py
app/models/product/: product.py
app/models/schedules/: block.py  schedule.py
app/models/time_recording/: time_recording.py
app/models/users/: user.py  users.py
app/repositories/: employee_repositories.py  login_repositories.py  products_repositories.py  schedule_repositories.py  service_schedule.py  slots_repositories.py  users_repositories.py
app/routes/: bot.py  employee.py  healtchek.py  login.py  product.py  schedule.py  users.py
app/schemas/: employee.py  login.py  messages.py  pagination.py  product.py  schedule.py  service.py  slots.py  user.py  users.py  webhook.py
app/service/: employee.py  login.py  product.py  redis.py  schedule.py  services.py  slots.py  users.py
app/settings/: settings.py
app/utils/: metadata.py  pagination.py  products.py  reponse.py  slots.py
migrations/: README  docsdatabase.md  env.py  run_migrations.py
migrations/versions/: 22d2b4b995a0_init_migrations.py  41919cbdf07b_create_finance_tables.py  6ff30f4b02dd_initial_tables.py  9829a35dfff2_criar_todas_tabelas.py  de355efce566_init_migrations.py  e8b970253f8c_ajustando_o_banco_de_dados.py
test/: conftest.py  test_app.py
test/unit/app/models/employee/: test_employee_model.py
test/unit/app/models/users/: test_users.py  test_users_model.py
test/unit/app/routes/: test_users.py  test_users_routes.py
