[project]
name = "fastapp-build-chatbot-manager"
version = "1.0.0"
description = "Fastapp build chatbot manager with WhatsApp"
authors = [
    { name = "Hedris Pereira", email = "hedrisgts@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["E501"]
select = ["I", "F", "E", "W", "PL", "PT"]
ignore = ["E402", "F811"]

[tool.pytest.ini_options] # para gerar o html --cov-report=html
pythonpath = ["."]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--verbose --cov=app"
