[project]
name = "fastapp-build-chatbot-manager"
version = "1.0.0"
description = "Fastapp build chatbot manager with WhatsApp"
authors = [
    { name = "Hedris Pereira", email = "hedrisgts@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"

[tool.ruff]
line-length = 130
target-version = "py312"
exclude = ["venv", ".venv", "__pycache__", ".pytest_cache", "migrations", "alembic", "docs", ".git"]
fix = true

# Ignore linters PL
[tool.ruff.lint]
extend-select = ["E501"]
select = ["I", "F", "W", "PT"]
ignore = ["E402", "F811"]

[tool.ruff.format]
preview = true
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false


[tool.pytest.ini_options] # para gerar o html --cov-report=html
pythonpath = ["."]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--verbose --cov=app --cov-report=html --cov-report=term --cov-branch"

[tool.coverage.run]
branch = true
omit = [
  "tests/*",
  "venv/*",
  ".venv/*",
  "app/main.py",
  "app/alembic/*",
  "app/alembic/*",
  "app/alembic/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]


[tool.alembic]
# path to migration scripts.
# this is typically a path given in POSIX (e.g. forward slashes)
# format, relative to the token %(here)s which refers to the location of this
# ini file
script_location = "%(here)s/alembic"

# template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
# Uncomment the line below if you want the files to be prepended with date and time
# see https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file
# for all available tokens
# file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"

# additional paths to be prepended to sys.path. defaults to the current working directory.
prepend_sys_path = [
    "."
]

